# hyrise

./: .gitignore  .gitmodules  encoding_CompactVector.json  encoding_Dictionary.json  encoding_FrameOfReference.json  encoding_LZ4.json  encoding_RunLength.json  encoding_SIMDCAI.json  encoding_TurboPFOR_bitpacking.json  encoding_Unencoded.json  encoding_dictionary.json  encoding_fastpfor.json  runSegmentEncodingBenchmarks.sh  sizes_.txt
scripts/: execute_benchmarks.sh
src/: CMakeLists.txt
src/benchmark/: CMakeLists.txt  benchmark_column_compression.cpp  benchmark_column_compression_SIMDCompressionAndIntersection.hpp  benchmark_column_compression_SIMDCompressionAndIntersection_s4fastpford1.hpp  benchmark_column_compression_compactVector.hpp  benchmark_column_compression_data.hpp  benchmark_column_compression_dictionary.hpp  benchmark_column_compression_fastPFOR.hpp  benchmark_column_compression_maskedVByte.hpp  benchmark_column_compression_maskedVByteDelta.hpp  benchmark_column_compression_oroch_integerArray.hpp  benchmark_column_compression_oroch_varint.hpp  benchmark_column_compression_sdsl_lite.hpp  benchmark_column_compression_sdsl_lite_dac_vector.hpp  benchmark_column_compression_sdsl_lite_vlc_vector.hpp  benchmark_column_compression_streamVByte.hpp  benchmark_column_compression_streamVByte0124.hpp  benchmark_column_compression_streamVByteDelta.hpp  benchmark_column_compression_turboPFOR.hpp  benchmark_column_compression_turboPFOR_bitcompression.hpp  benchmark_column_compression_turboPFOR_block.hpp  benchmark_column_compression_turboPFOR_direct.hpp  benchmark_column_compression_turboPFOR_direct_chunking.hpp  benchmark_column_compression_unencoded.hpp  tpcds_benchmark.cpp  tpch_benchmark.cpp
src/benchmark/compact_vector/: compact_iterator.hpp
src/benchmarklib/: benchmark_runner.cpp
src/lib/: CMakeLists.txt  constant_mappings.cpp
src/lib/import_export/binary/: binary_parser.cpp  binary_parser.hpp  binary_writer.cpp  binary_writer.hpp
src/lib/logical_query_plan/: abstract_lqp_node.hpp
src/lib/operators/: abstract_operator.hpp  aggregate_hash.cpp  delete.cpp  index_scan.hpp  insert.cpp  join_hash.cpp  join_index.hpp  join_sort_merge.cpp  print.cpp  union_positions.cpp  union_positions.hpp  validate.cpp
src/lib/operators/join_hash/: join_hash_steps.hpp
src/lib/optimizer/strategy/: semi_join_reduction_rule.hpp  semi_join_removal_rule.cpp  semi_join_removal_rule.hpp
src/lib/scheduler/: worker.hpp
src/lib/storage/: base_segment_encoder.hpp  bitpacking_segment.cpp  bitpacking_segment.hpp  create_iterable_from_segment.hpp  create_iterable_from_segment.ipp  encoding_type.hpp  fastPFOR_segment.cpp  fastPFOR_segment.hpp  resolve_encoded_segment_type.hpp  segment_encoding_utils.cpp  simdCAI_segment.cpp  simdCAI_segment.hpp  turboPFOR_segment.cpp  turboPFOR_segment.hpp
src/lib/storage/bitpacking_segment/: bitpacking_encoder.hpp  bitpacking_segment_iterable.hpp  vector_types.hpp
src/lib/storage/fastPFOR_segment/: fastPFOR_encoder.hpp  fastPFOR_segment_iterable.hpp
src/lib/storage/lz4_segment/: lz4_encoder.hpp
src/lib/storage/turboPFOR_segment/: turboPFOR_encoder.hpp  turboPFOR_segment_iterable.hpp  turboPFOR_wrapper.hpp
src/lib/storage/vector_compression/: resolve_compressed_vector_type.hpp
src/lib/storage/vector_compression/bitpacking/: bitpacking_compressor.cpp  bitpacking_decompressor.hpp  bitpacking_iterator.hpp  bitpacking_vector.cpp  bitpacking_vector.hpp
src/lib/storage/vector_compression/turboPFor_bitpacking/: turboPFor_bitpacking_compressor.cpp  turboPFor_bitpacking_compressor.hpp  turboPFor_bitpacking_decompressor.hpp  turboPFor_bitpacking_iterator.hpp  turboPFor_bitpacking_vector.cpp  turboPFor_bitpacking_vector.hpp
src/test/: CMakeLists.txt  base_test.hpp
src/test/lib/storage/: chunk_encoder_test.cpp  encoded_segment_test.cpp  encoded_string_segment_test.cpp
src/test/lib/utils/meta_tables/: meta_table_test.cpp
